# NutriTrack

./: .gitignore  CLAUDE.md  hello.md
nutritrack/: .env  .gitignore  Makefile  README.md  demo-credentials.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
nutritrack/.github/workflows/: deploy-docs.yml  docker.yml  lint.yml  test.yml
nutritrack/agent/: README.md  pyproject.toml
nutritrack/agent/agent/: __init__.py  browser.py  (+4 more)
nutritrack/airflow/: Dockerfile  requirements.txt
nutritrack/api/: Dockerfile  config.py  database.py  main.py  requirements.txt
nutritrack/app/: Dockerfile  requirements.txt  streamlit_app.py
nutritrack/docs/: Makefile  analytics_dashboard.md  certification_audit.md  data_platform_plans.md  defense_slides.tex  dw_vs_datalake_justification.md  final_deck.tex  generate_defense_pptx.py  generate_pptx.py  presenter_plan.md  rapport_final.md  rapport_final.tex  senior_dev_review_brief.md  speaker_notes.md  technical_stack_choices.md  veille_technologique.md
nutritrack/mkdocs/: mkdocs.yml
nutritrack/scripts/: aggregate_clean.py  backup_database.py  extract_duckdb.py  extract_from_db.py  extract_off_api.py  extract_off_parquet.py  extract_scraping.py  import_to_db.py  load_sample_data.sql  setup_minio.py
nutritrack/sql/: scd_procedures.sql
nutritrack/superset/: Dockerfile  bootstrap_dashboards.py  superset-init.sh  superset_config.py
nutritrack/tests/: conftest.py  test_api_endpoints.py  test_api_schemas.py  test_etl_functions.py  test_meal_schemas.py  test_project_structure.py  test_sql_schemas.py
(+84 files in other folders)
