[project]
name = "nutritrack-health-agent"
version = "0.1.0"
description = "AI-powered UI health monitor for NutriTrack platform"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "playwright>=1.49.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
nutritrack-agent = "agent.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
